--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.11",
+    "konva": "^10.0.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-konva": "^19.0.10",
     "react-router": "^7.7.0",
     "tailwindcss": "^4.1.11",
     "uuid": "^11.1.0"
